--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
 </head>
 <body>
 
-
-
 <img class="image1" src="C:\Users\Lenovo\OneDrive\Área de Trabalho\startup\site\img\image1.png" />
 <img class="image2" src="C:\Users\Lenovo\OneDrive\Área de Trabalho\startup\site\img\bradcrumb.png" />
 
 <div class="form">
     <h1>Francisco Guilherme da Silva</h1>
     <label>1. Qual a data do lançamento do credito tributario ?</label>
-    <input name="input" placeholder="Responda aqui" type="date">
+    <input name="input" placeholder="28/05" type="text">
     <a href="pergunta.html">OK</a>
 </div>
 <img class="image3" src="C:\Users\Lenovo\OneDrive\Área de Trabalho\startup\site\img\Frame1.png" />
