--- a/perfil.html
+++ b/perfil.html
@@ -18,7 +18,7 @@
 <div class="form">
     <h1>Francisco Guilherme da Silva</h1>
     <label>3. qual o valor da divida</label>
-    <input name="input" placeholder="Responda aqui" type="text">
+    <input name="input" placeholder="5000" type="text">
     <a href="perfilzao.html"><button>OK</button></a>
 </div>
 <img class="image3" src="C:\Users\Lenovo\OneDrive\Área de Trabalho\startup\site\img\Frame1.png" />
