--- a/perfilzao.html
+++ b/perfilzao.html
@@ -18,7 +18,7 @@
 <div class="form">
     <h1>Francisco Guilherme da Silva</h1>
     <label>2. Qual data em que o Contribuinte praticou o Fato Gerador do Tributo?</label>
-    <input name="input" placeholder="Responda aqui" type="date">
+    <input name="input" placeholder="12/06" type="text">
     <a href="ultimaper.html"><button>OK</button></a>
 </div>
 <img class="image3" src="C:\Users\Lenovo\OneDrive\Área de Trabalho\startup\site\img\Frame1.png" />
