--- a/pergunta.html
+++ b/pergunta.html
@@ -17,8 +17,8 @@
 
 <div class="form">
     <h1>Francisco Guilherme da Silva</h1>
-    <label>2. indique a taxa de juros ecorreção monetaria</label>
-    <input name="input" placeholder="Responda aqui" type="text">
+    <label>2. indique a taxa de juros e correção monetaria</label>
+    <input name="input" placeholder="responda aqui" type="text">
     <a href="perfil.html"><button>OK</button></a>
 </div>
 <img class="image3" src="C:\Users\Lenovo\OneDrive\Área de Trabalho\startup\site\img\Frame1.png" />
