--- a/ultimaper.html
+++ b/ultimaper.html
@@ -18,7 +18,7 @@
 <div class="form">
     <h1>Francisco Guilherme da Silva</h1>
     <label>1. Quanto é, aproximadamente, a renda mensal do contribuinte(R$)?</label>
-    <input name="input" placeholder="Responda aqui" type="text">
+    <input name="input" placeholder="500" type="text">
     <a href="./uu.html"><button>OK</button></a>
 </div>
 <img class="image3" src="C:\Users\Lenovo\OneDrive\Área de Trabalho\startup\site\img\Frame1.png" />
